# cross_market_arbitrage

./: .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  pyproject.toml  开发计划_TODO.md  跨市场监控开发文档.docx
config/: alert_thresholds.yaml  app.macmini.yaml  app.yaml  domestic_trading_calendar.cn_futures.2026.yaml  local.example.yaml  monitor.app.yaml  monitor.example.yaml  monitor.macmini.yaml  monitor.notifiers.example.yaml  monitor.notifiers.yaml  monitor.pairs.example.yaml  monitor.secrets.local.example.yaml  monitor.sources.example.yaml  monitor.yaml  pair_enabled.yaml  pairs.macmini.yaml  pairs.tqsdk.yaml  pairs.yaml  sources.yaml
cross_market_monitor/: __init__.py  main.py
docs/: macmini_nohup_runbook.md  macmini_nohup_runbook.txt  macmini_overnight_checklist.txt  s.apr88.com.nginx.conf.example
public/: app.js  index.html  styles.css
scripts/: check_db_growth.py  check_db_size.py  db_metrics_common.py  export_runtime_diagnostics.py  sample_web_stability.py  start_macmini.sh  start_macmini_local.sh  stop_macmini.sh  watch_db_growth.sh
src/: config.js  dataSources.js  monitor.js  normalization.js  server.js
systemd/: cross-market-monitor-api.service  cross-market-monitor-worker.service  cross-market-monitor.service
tests/: test_api.py  test_config_loader.py  test_formulas.py  test_gate_tradfi_adapter.py  test_hyperliquid_adapter.py  test_main.py  test_main_logging.py  test_notifiers.py  test_overseas_history_adapters.py  test_quote_router.py  test_replay.py  test_repository.py  test_service.py  test_shfe_adapter.py  test_sina_adapter.py  (+7 more)
(+68 files in other folders)
