[project]
name = "cross-market-monitor"
version = "0.1.0"
description = "Cross-market commodity spread monitor for domestic futures vs overseas proxies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0.0",
  "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cross_market_monitor*"]
