[project]
name = "cross-market-monitor"
version = "0.1.0"
description = "Cross-market commodity spread monitor for domestic futures vs overseas proxies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=18.0.0"]
tqsdk = ["tqsdk>=3.9.0"]

[project.scripts]
cross-market-monitor = "cross_market_monitor.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cross_market_monitor*"]
